--- a/css/styles.css
+++ b/css/styles.css
@@ -1,32 +1,51 @@
-#suggestion1, #suggestion2, #suggestion3 {
-    font-family: Arial, Helvetica, sans-serif;  
-    font-size: medium;  
+#suggestion1,
+#suggestion2,
+#suggestion3 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: medium;
     display: flex;
     background: rgb(150, 187, 220)
 }
+
 h1 {
     color: rgb(199, 104, 104);
     margin: 5%;
-    font-family:'Times New Roman', Times, serif Arial, Helvetica, sans-serif;
+    font-family: 'Times New Roman', Times, serif Arial, Helvetica, sans-serif;
     font-weight: bold;
     text-align: center;
     font-size: 200%;
     font-style: oblique;
 }
+
 body {
-    padding: 15%;
+    padding: 11%;
     font-family: 'Times New Roman', Times, serif;
     background-image: url(https://t3.ftcdn.net/jpg/04/87/25/96/360_F_487259621_skN0Ty9jCZdoU5sdHpR5a0g5XmZ5ozep.jpg)
 }
-div > p {
+
+div>p {
     padding: 3%;
-    flex:content ;
+    flex: content;
 }
+
 .user_name {
     font-family: 'Times New Roman', Times, serif;
     font-style: inherit;
 }
-div > label {
-    padding: 3%;
 
+div>label {
+    padding: 3%;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: larger;
+    display: inline-flex;
+    color: rgb(197, 79, 63)
+}
+
+.text-center {
+    font-size: large;
+}
+
+#suggestion-form {
+    font-weight: bold;
+    font-size: large;
 }
